[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/font/04b_30/04B_30__.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/karakter/DinoSprites - doux.png" type="Texture" id=2]
[ext_resource path="res://assets/karakter/DinoSprites - mort.png" type="Texture" id=3]
[ext_resource path="res://assets/karakter/DinoSprites - vita.png" type="Texture" id=4]
[ext_resource path="res://assets/karakter/DinoSprites - tard.png" type="Texture" id=5]
[ext_resource path="res://pilih karakter/pilihkarakter.gd" type="Script" id=6]
[ext_resource path="res://assets/ground/clouds foreground.png" type="Texture" id=7]
[ext_resource path="res://assets/map/clouds background.png" type="Texture" id=8]
[ext_resource path="res://pilih karakter/tanah.gd" type="Script" id=9]
[ext_resource path="res://assets/ground/tanah.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/kikobutton.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/jojobutton.png" type="Texture" id=12]
[ext_resource path="res://assets/gui/pikobutton.png" type="Texture" id=13]
[ext_resource path="res://assets/gui/totobutton.png" type="Texture" id=14]
[ext_resource path="res://assets/font/choose dino.png" type="Texture" id=15]
[ext_resource path="res://assets/gui/pencet.png" type="Texture" id=16]
[ext_resource path="res://assets/music/Pickup_00.wav" type="AudioStream" id=17]



[sub_resource type="Animation" id=1]
resource_name = "kikolari"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=2]
resource_name = "kikolari"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "kikolari"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "kikolari"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[node name="pilihkarakter" type="Node2D"]
script = ExtResource( 6 )

[node name="backgrond" type="Node2D" parent="."]

[node name="biru" type="Sprite" parent="backgrond"]
position = Vector2( 502.443, 160.078 )
scale = Vector2( 3.41915, 4.65304 )
texture = ExtResource( 8 )

[node name="putih" type="Sprite" parent="backgrond"]
position = Vector2( 514.472, 368.273 )
texture = ExtResource( 7 )

[node name="tanah" type="Sprite" parent="backgrond"]
position = Vector2( 947.735, 596.332 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="backgrond/tanah"]
wait_time = 5.0
autostart = true

[node name="choose dino" type="Sprite" parent="backgrond"]
visible = false
position = Vector2( 515, 35 )
scale = Vector2( 3, 3 )
texture = ExtResource( 15 )

[node name="kiko2" type="Sprite" parent="."]
position = Vector2( 202.577, 128.091 )
scale = Vector2( 7, 7 )
texture = ExtResource( 2 )
hframes = 24
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="kiko2"]
anims/kikolari = SubResource( 1 )

[node name="jojo2" type="Sprite" parent="."]
position = Vector2( 823.865, 128.091 )
scale = Vector2( 7, 7 )
texture = ExtResource( 3 )
hframes = 24
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="jojo2"]
anims/kikolari = SubResource( 2 )

[node name="piko2" type="Sprite" parent="."]
position = Vector2( 202.577, 387.724 )
scale = Vector2( 7, 7 )
texture = ExtResource( 5 )
hframes = 24
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="piko2"]
anims/kikolari = SubResource( 3 )

[node name="toto2" type="Sprite" parent="."]
position = Vector2( 837.246, 387.724 )
scale = Vector2( 7, 7 )
texture = ExtResource( 4 )
hframes = 24
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="toto2"]
anims/kikolari = SubResource( 4 )

[node name="kiko" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 144.991
margin_top = 225.249
margin_right = 259.991
margin_bottom = 267.249
custom_fonts/font = SubResource( 5 )
text = "kiko"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jojo" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 771.111
margin_top = 227.185
margin_right = 899.111
margin_bottom = 269.185
custom_fonts/font = SubResource( 5 )
text = "jojo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="piko" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 141.29
margin_top = 483.698
margin_right = 269.29
margin_bottom = 525.698
custom_fonts/font = SubResource( 5 )
text = "piko"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toto" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 774.201
margin_top = 481.848
margin_right = 902.201
margin_bottom = 523.848
custom_fonts/font = SubResource( 5 )
text = "toto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pilih dino " type="Label" parent="."]
margin_left = 258.509
margin_top = 21.0
margin_right = 764.509
margin_bottom = 57.0
custom_fonts/font = SubResource( 6 )
text = "CHOOSE YOUR DINO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kiko3" type="TouchScreenButton" parent="."]
position = Vector2( 91.0147, 194.101 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 11 )
pressed = ExtResource( 16 )

[node name="piko3" type="TouchScreenButton" parent="."]
position = Vector2( 91.0147, 458.101 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 16 )

[node name="jojo3" type="TouchScreenButton" parent="."]
position = Vector2( 731.015, 194.101 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 12 )
pressed = ExtResource( 16 )

[node name="toto3" type="TouchScreenButton" parent="."]
position = Vector2( 731.015, 458.101 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 14 )
pressed = ExtResource( 16 )

[node name="pilih" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = -6.71

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 508.944, 299.818 )
[connection signal="timeout" from="backgrond/tanah/Timer" to="backgrond/tanah" method="_on_Timer_timeout"]
[connection signal="pressed" from="kiko3" to="." method="_on_kiko3_pressed"]
[connection signal="released" from="kiko3" to="." method="_on_kiko3_released"]
[connection signal="pressed" from="piko3" to="." method="_on_piko3_pressed"]
[connection signal="released" from="piko3" to="." method="_on_piko3_released"]
[connection signal="pressed" from="jojo3" to="." method="_on_jojo3_pressed"]
[connection signal="released" from="jojo3" to="." method="_on_jojo3_released"]
[connection signal="pressed" from="toto3" to="." method="_on_toto3_pressed"]
[connection signal="released" from="toto3" to="." method="_on_toto3_released"]
